# doc-trace

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.agents/skills/update-docs/: SKILL.md
.bctx/templates/_default/: context.md
.changelog/: +affected-circular-refs.bugfix.md  +cmd-registry.misc.md  +completion-command.feature.md  +ignore-flag.feature.md  +index-command.feature.md  +inline-refs-validation.feature.md  +macos-symlinks.bugfix.md  +refactors.misc.md  .gitkeep
.claude/agents/: python-expert.md
.claude/commands/: update-docs-new.md  update-docs.md
.claude/commands/docs/: update-docs.md
.devpanel/: config.jsonc
.docsync/: config.json
.doctrace/: config.json  lock.json  pr-body.md  pr-title.txt
.doctrace/syncs/2026-02-17T09-52-01/: add-doc-metadata.md  architecture.md  cicd.md  concepts.md  initialization.md  overview.md  prompt-generation.md  rules.md  setup-project.md  structure.md  testing.md  tooling.md  validation.md
.doctrace/syncs/2026-02-17T17-17-54/: affected.md  architecture.md  preview.md  rules.md  structure.md  testing.md
.doctrace/syncs/2026-02-17T17-33-41/: affected.md  overview.md  structure.md
.doctrace/syncs/2026-02-17T17-46-25/: affected.md  concepts.md  (+5 more)
.doctrack/: config.json
.github/scripts/: run-claude.sh  update-docs.sh
.github/workflows/: callable-ci.yml  release.yml  update-docs.yml
docs/: architecture.md  concepts.md  index.md  overview.md  rules.md  test.md  testing.md
docs/features/: affected.md  cascade.md  completion.md  dependency-tree.md  index-cmd.md  initialization.md  preview.md  prompt-generation.md  validation.md
docs/guides/: add-doc-metadata.md  create-release.md  setup-project.md  validate-docs.md
docs/repo/: cicd.md  local-setup.md  structure.md  tooling.md
src/docsync/: __init__.py  cascade.py  cli.py  config.py  constants.py  lock.py  parser.py  tree.py  validator.py
src/doctrace/: __init__.py  cli.py  cmd_registry.py
src/doctrack/: __init__.py  cli.py
tests/: test_cascade.py  test_parser.py  test_tree.py  test_validator.py
tests/affected/: test_scope_resolution.py
tests/cascade/: test_scope_resolution.py
tests/cli/: test_affected_flags.py  test_cascade_flags.py
tests/core/: test_docs.py
tests/preview/: test_graph.py  test_search.py  test_tree.py
(+194 files in other folders)
