[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docsync"
version = "0.1.2"
description = "Auto-validate and update docs in large codebases"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.9", "towncrier>=23", "bump2version>=1"]

[project.scripts]
docsync = "docsync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test.py", "test_*.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.towncrier]
directory = ".changelog"
filename = "CHANGELOG.md"
title_format = "## {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true
