[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doctrace"
version = "0.2.1"
description = "Track doc dependencies and detect affected docs from code changes"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.9", "towncrier>=23", "bump2version>=1"]

[project.scripts]
doctrace = "doctrace.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doctrace"]

[tool.hatch.build.targets.wheel.force-include]
"src/doctrace/commands/preview/template.html" = "doctrace/commands/preview/template.html"

[tool.hatch.build.targets.sdist]
include = ["src/doctrace/**/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test.py", "test_*.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.towncrier]
directory = ".changelog"
filename = "CHANGELOG.md"
title_format = "## {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true
